[package]
name = "screencap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"

ctrlc = "3.1.9"
anyhow = "1.0.43"
scrap = "0.5.0"
structopt = "0.3.14"
chrono = "0.4.11"
repng = "0.2.2"